# cmake-best-practices

./: .travis.yml  README.md
examples/001-helloworld/: .travis.yml  CMakeLists.txt  build-and-test.sh
